--- a/views/home/block-main.tpl.html
+++ b/views/home/block-main.tpl.html
@@ -33,7 +33,7 @@
                                     <li>100% Satisfaction Guarantee on ALL Transports</li>
                                     <li>Knowledgeable and professional team members</li>
                                     <li>Fully insured and bonded carriers</li>
-                                    <li>Enclosed Carriers</li>
+                                    <li>Open and Enclosed Carriers</li>
                                     <!--<li>Licensed by the FMSCA (Federal Motor Safety Carrier Administration)</li>-->
                                     </ul>
                                     <p style="text-align: center;"><strong></strong></p>      
